--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -2,3 +2,33 @@ body {
     font-family: 'Baskervville', serif !important;
 
 }
+
+form {
+    max-width: 500px;
+    margin: 10px auto;
+    padding: 10px 20px;
+    background: #e3e3e3;
+    border-radius: 8px;
+    grid-column: 1/2;
+    grid-row: 3/4
+  }
+
+  input[type="text"],
+  input[type="password"],
+  input[type="email"],
+  textarea,select {
+    background: rgba(255, 255, 255, 0.1);
+    border: 2px solid transparent;
+    font-size: 16px;
+    height: auto;
+    margin: 0;
+    outline: 0;
+    padding: 15px;
+    width: 100%;
+    background-color: #f5f5f5;
+    color: #8a97a0;
+    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.03) inset;
+    margin-bottom: 30px;
+    caret-color: purple;
+    transition: all 350ms;
+  }
