comment carousel constraints

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -3,16 +3,18 @@ body {
 
 }
 
+/*
 .carousel-item {
-    height: 500px;
+    max-height: auto;
  }
 
-.carousel-indicators li{ 
-   height: 12px !important;
-   width: 3px !important;
-     }
 
- 
+.carousel-indicators li{ 
+    height: 12px !important;
+    width: 3px !important;
+}
+*/ 
+
 form {
     max-width: 500px;
     margin: 10px auto;
