--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -14,6 +14,13 @@ body {
     width: 3px !important;
 }
 
+.row-building {
+    display: flex;
+    align-items: flex-end;
+}
+
+
+
 form {
     max-width: 500px;
     margin: 10px auto;
