changes to project page
added images and a class to stylesheet

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -19,7 +19,11 @@ body {
     align-items: flex-end;
 }
 
-
+.col-sm-5 img {
+    width: 60%;
+    height: auto;
+    margin-left: 100px;
+}
 
 form {
     max-width: 500px;
