--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -80,6 +80,9 @@ textarea,select {
     background-color: #0081afff !important;
 }
 
+footer{
+    background-color: #ead2acff;
+}
 /* CSS HEX */
 --cerulean: #0081afff;
 --picton-blue: #00abe7ff;
