--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -27,6 +27,9 @@ h2{
     margin-left: 20px;
 }
 
+.card-body{
+    background: #ead2acff;
+}
 form {
     max-width: 500px;
     margin: 10px auto;
