--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -4,11 +4,11 @@ body {
 }
 
 h1 {
-    size: 39px;
+    font-size: 38px !important;
 }
 
 h2{
-    size: 28px;
+    font-size: 32px !important;
 }
 
 .carousel-indicators li{ 
@@ -16,10 +16,7 @@ h2{
     width: 3px !important;
 }
 
-.row-building {
-    display: flex;
-    align-items: flex-end;
-}
+
 
 .col-sm-5 img {
     width: 60%;
