--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -114,10 +114,8 @@ textarea,select {
     background-color: #eaba6bff !important;
 }
 
-
-
 footer{
-    background-color: #;
+    background-color: #0081afff;
 }
 
 /* CSS HEX */
