--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -57,26 +57,14 @@ textarea,select {
     transition: all 350ms;
 }
 
-.gradient-button {
-    background-image: linear-gradient(
-    -30deg,
-    lightblue 10% 50%,
-    cadetblue 50% 100%
-    );
+.submit-button {
     background-size: 200%;
     border-radius: 0.5rem;
     height: 100px;
-    width: 320px;
-    background-position: 0%;
-    transition: background-position 1s ease;
+    width: 
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: hidden;
-}
-      
-.gradient-button:hover {
-    background-position: 50%;
 }
 
 @media only screen and (min-width: 768px) {
