--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -28,14 +28,12 @@ h2{
     background: #ead2acff;
 }
 
+
 form {
-    max-width: 500px;
-    margin: 10px auto;
-    padding: 10px 20px;
-    background: #e3e3e3;
-    border-radius: 8px;
-    grid-column: 1/2;
-    grid-row: 3/4
+    height: 100%;
+    margin: 10px;
+    padding: 30px;
+    color: white;
 }
 
 input[type="text"],
@@ -43,27 +41,37 @@ input[type="password"],
 input[type="email"],
 textarea,select {
     background: rgba(255, 255, 255, 0.1);
-    border: 2px solid transparent;
-    font-size: 16px;
+    border: 1px solid transparent;
+    font-size: 15px;
     height: auto;
     margin: 0;
     outline: 0;
     padding: 15px;
     width: 100%;
     background-color: #f5f5f5;
-    color: #8a97a0;
+    color: #284458;
     box-shadow: 0 1px 0 rgba(0, 0, 0, 0.03) inset;
     margin-bottom: 30px;
     transition: all 350ms;
 }
 
-.submit-button {
-    border-radius: 0.5rem;
-    height: 100px;
-    width: 320px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+button {
+    padding: 19px 39px 19px 39px;
+    font-size: 20px;
+    text-align: center;
+    border-radius: 10px;
+    border: none;
+    width: 100%;
+    margin-bottom: 10px;
+    color: #0081afff;
+    background-color: #f5f5f5;
+}
+
+button:hover,
+button:focus {
+    background-color: #0081afff;
+    color: white;
+    transition: all 350ms ease-in-out;
 }
 
 @media only screen and (min-width: 768px){
@@ -71,10 +79,9 @@ textarea,select {
         max-width: 100%;
         height: auto;
     }
-
 }
 
-@media only screen and (width: 768px) {
+@media only screen and (max-width: 768px) {
     .sitterson {
         height: 50%;
     }
@@ -85,11 +92,6 @@ textarea,select {
     
 }
 
-    
-}
-.sitterson {
-    border-radius: 20px !important;
-}
 
 .btn-primary {
     background-color: #0081afff !important;
