--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -31,8 +31,8 @@ h2{
 
 form {
     height: 100%;
-    margin: 10px;
-    padding: 30px;
+    margin: 5px;
+    padding: 20px;
     color: white;
 }
 
@@ -52,7 +52,7 @@ textarea,select {
     color: #284458;
     box-shadow: 0 1px 0 rgba(0, 0, 0, 0.03) inset;
     margin-bottom: 30px;
-    transition: all 350ms;
+    transition: all 250ms;
 }
 
 button {
@@ -69,7 +69,7 @@ button {
 
 button:hover,
 button:focus {
-    background-color: #0081afff;
+    background-color: #00abe7ff;
     color: white;
     transition: all 350ms ease-in-out;
 }
@@ -82,14 +82,10 @@ button:focus {
 }
 
 @media only screen and (max-width: 768px) {
-    .sitterson {
-        height: 50%;
+    iframe {
+        height: 500px;
     }
 
-    .submit-button {
-        width: 500px
-    }
-    
 }
 
 
