--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -11,6 +11,10 @@ h2{
     font-size: 32px !important;
 }
 
+.text-dark {
+    color: black;
+}
+
 .carousel-indicators li{ 
     height: 12px !important;
     width: 3px !important;
@@ -67,14 +71,14 @@ button {
     border: none;
     width: 100%;
     margin-bottom: 10px;
-    color: #0081afff;
+    color: #074F69;
     background-color: #f5f5f5;
 }
 
 button:hover,
 button:focus {
     background-color: #ead2acff;
-    color: white;
+    color: black;
     transition: all 350ms ease-in-out;
 }
 
@@ -98,11 +102,11 @@ button:focus {
 
 
 .btn-primary {
-    background-color: #0081afff !important;
+    background-color: #074F69 !important;
 }
 
 .bg-primary {
-    background-color: #0081afff !important;
+    background-color: #074F69 !important;
 }
 
 .bg-light {
@@ -114,7 +118,7 @@ button:focus {
 }
 
 footer{
-    background-color: #0081afff;
+    background-color: #074F69;
 }
 
 /* 
