--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -123,7 +123,7 @@ footer{
 
 /* 
 CSS HEX COLOR PALETTE
---cerulean: #0081afff;
+-- #074F69;
 --picton-blue: #00abe7ff;
 --vivid-sky-blue: #2dc7ffff;
 --wheat: #ead2acff;
