--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -57,7 +57,7 @@ textarea,select {
     padding: 15px;
     width: 100%;
     background-color: #f5f5f5;
-    color: #284458;
+    color: #7BAFD4;
     box-shadow: 0 1px 0 rgba(0, 0, 0, 0.03) inset;
     margin-bottom: 30px;
     transition: all 250ms;
@@ -123,7 +123,7 @@ footer{
 
 /* 
 CSS HEX COLOR PALETTE
--- #074F69;
+-- #7BAFD4;
 --picton-blue: #00abe7ff;
 --vivid-sky-blue: #2dc7ffff;
 --wheat: #ead2acff;
