--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -102,7 +102,7 @@ button:focus {
 
 
 .btn-primary {
-    background-color: #074F69 !important;
+    background-color: #4B9CD3 !important;
 }
 
 .bg-primary {
@@ -110,24 +110,14 @@ button:focus {
 }
 
 .bg-light {
-    background-color: #ead2acff !important;
+    background-color: #F4E8DD !important;
 }
 
 .bg-secondary {
-    background-color: #eaba6bff !important;
+    background-color: #FFD100 !important;
 }
 
 footer{
-    background-color: #074F69;
+    background-color: #4B9CD3;
 }
-
-/* 
-CSS HEX COLOR PALETTE
--- #7BAFD4;
---picton-blue: #00abe7ff;
---vivid-sky-blue: #2dc7ffff;
---wheat: #ead2acff;
---earth-yellow: #eaba6bff;
-*/
-
 
