icon addition, viewing addition for scability

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -102,7 +102,7 @@ button:focus {
 
 
 .btn-primary {
-    background-color: #4B9CD3 !important;
+    background-color: #13294B !important;
 }
 
 .bg-primary {
